Source/WebCore/platform/MIMETypeRegistry.h
@@ -63,6 +63,9 @@ public:
     // Check to see if a MIME type is suitable for being loaded as a font.
     static bool isSupportedFontMIMEType(const String& mimeType);
 
+    // Check to see if a MIME type is a text media playlist type, such as an m3u8.
+    static bool isTextMediaPlaylistMIMEType(const String& mimeType);
+
     // Check to see if a non-image MIME type is suitable for being loaded as a
     // document in a frame. Does not include supported JavaScript and JSON MIME types.
     WEBCORE_EXPORT static bool isSupportedNonImageMIMEType(const String& mimeType);
